# agentic_repo

./: README.md  pyproject.toml
agent_protocols/: README.md
crewai_agents/: README.md
crewai_agents/01-Telegram_Agent/: crew.py  telegram.py
langgraph+pydanticAi/: README.md
langgraph+pydanticAi/01-Archon/: crawl_pydantic_ai_docs.py
langgraph+pydanticAi/01-Archon(v2)/: .env.example  archon_graph.py  streamlit_ui.py
langgraph_agents/: README.md
langgraph_agents/01-Text_Analyser/: main.py
langgraph_agents/03-Software_Team/: main.py
langgraph_agents/04-Financial_Research_Team/: main.py
pydanticAi_agents/: README.md
pydanticAi_agents/02-Mem0_Agent/: requirements.txt
